# Thera-link

./: .env  .gitignore  Config.yaml  README.md  mesh_cert.pem  mesh_key.pem  pyproject.toml
bridges/: slime_mold.py
ceremony/: blessing.py  run_blessing.sh
docs/: CONTRIBUTING.md  architecture.md
evolution/: autopoiesis.py  diagnostics_as_music.py  loop_sentinel.py  nested_hybrid.py  nightly_evolution.sh  self_composed_tests.py
hemispheres/: fusion_demo.py
hemispheres/left/: __init__.py
hemispheres/left/alpha/: nlp_art.py  voice_gate.py
hemispheres/left/beta/: multimodal.py
hemispheres/left/delta/: ant_colony.py
hemispheres/left/theta/: strategic_reasoning.py
hemispheres/right/: __init__.py
hemispheres/right/alpha/: sensory_nlp.py
hemispheres/right/theta/: octopus_swarm.py
inputs/: trauma_patterns.json  web_client.html
integrations/: archeogodzilla_adapter.py  voicelock_adapter.py  xai_bridge.py
mesh/: client_test.py  discovery.py  full_node.py  global_join.md  node.py
mobile/: apk_stub.py
models/voice/: auth.py
notebooks/: 02_hemisphere_build.ipynb
ontology/: fusion_hub.py  principles.yaml  self_awareness.py
scripts/: gen_certs.sh  god_mode_evolve.sh  lep_runner.py  live_demo.py  loop_sentinel.py  optimize.sh  run.sh  run_mesh.sh  run_with_awareness.sh
tests/: attack_simulations.py  benchmark_runner.py  demand_sim.py  forecast_evals.py  integration_tests.py  matharena_apex.py  relational_evals.py
tests/benchmarks/: matharena_apex.py
utils/: device_profile.py
